# siomi

./: .gitignore  README.md  main.py  pyproject.toml
src/app/: main.py
src/app/application/dto/: response_message_dto.py  user_message_dto.py
src/app/application/mapper/: message_mapper.py
src/app/application/use_case/: llm_use_case.py
src/app/domain/enum/: technical_message.py
src/app/domain/exception/: business_exception.py  processor_exception.py
src/app/domain/interface/: llm.py
src/app/domain/model/: message.py
src/app/infrastructure/adapter/ai/: AzureOpenAILLM.py
src/app/infrastructure/configuration/: di_container.py  settings.py
src/app/infrastructure/controller/: chat_controller.py
src/domain/entities/: __init__.py  conversation.py  message.py  query.py
src/domain/repositories/: IConversationRepository.py  IMessageRepository.py  __init__.py
src/domain/services/: ConversationService.py
src/tests/unit/domain/model/: test_message.py
