[project]
name = "siomi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]


[dependency-groups]
dev = [
    "pysonar>=1.3.0.4086",
    "pytest>=9.0.2",
]
