[project]
name = "siomi"
version = "0.1.0"
description = "Siomi is a platform multi-agent AI to generate answers to our clients by messages, documents, graphics, report from big data and more."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Olvadis Hernandez", email = "olvadis2004@gmail.com"},
]
maintainers = [
  {name = "Olvadis Hernandez", email = "olvadis2004@gmail.com"},
]
keywords = ["ai", "multi-agent", "platform", "fastapi", "langchain", "pydantic"]

license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]


[dependency-groups]
dev = [
    "pysonar>=1.3.0.4086",
    "pytest>=9.0.2",
    "uvicorn>=0.41.0",
]
